# rust-svdkit

./: .gitignore  Cargo.toml  LICENSE  README.md
.trae/rules/: conventional-commits.md  only-read-generated.md  read-only-directories.md
.trae/skills/dev-process/: SKILL.md
.trae/skills/verify-changes/: SKILL.md
examples/: nrf52840.rs  nrf52840_led_blink.rs
examples_old/: nrf52840.rs  nrf52840_led_blink.rs
scripts/: build-uf2.ps1
src/: error.rs  lib.rs
src/convert/: mod.rs
src/hal/: analyzer.rs  async_rt.rs  cdc_acm.rs  clock.rs  common.rs  config.rs  gpio.rs  ir.rs  mod.rs  power.rs  timer.rs  uart.rs  usb.rs
src/hal/emitter/: clock.rs  gpio.rs  mod.rs  power.rs  timer.rs  usb.rs
src/pac/: helpers.rs  ir.rs  mod.rs  static_files.rs
src/pac/emitter/: cargo.rs  clusters.rs  common.rs  directory.rs  enums.rs  mod.rs  peripherals.rs  registers.rs  runtime.rs  single_file.rs
src/svd/: mod.rs
src/xml/: mod.rs
tests/: golden.rs  json_export.rs
tests/snapshots/nrf52840/pac/: constants.rs  enums.rs  macros.rs  traits.rs  types.rs
tests/snapshots/nrf52840/pac/p0/: registers.rs
tests/snapshots/nrf52840/pac/peripherals/p0/: enums.rs  mod.rs  registers.rs
tests/snapshots/nrf52840/pac/peripherals/p1/: enums.rs  mod.rs  registers.rs
tools/: bin2uf2.py
workspaces/nrf52840/nrf52840-led-blink/: Cargo.toml
workspaces/nrf52840/nrf52840-led-blink-timer/: Cargo.toml  link.x  memory.x
workspaces/nrf52840/nrf52840-led-blink-timer/src/: main.rs
workspaces/nrf52840/nrf52840-led-blink/src/: main.rs
(+3 files in other folders)
