[package]
name = "svdkit"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[features]
json = ["dep:serde_json"]

[[bin]]
name = "svd2rs"
path = "src/bin/svd2rs.rs"
